Updated version of the CSS file with new styles that improve the visual appearance and usability of the web application. Includes modifications to the font sizes, colors, and layout of various elements on the page.

--- a/webapp/static/css/webapp.css
+++ b/webapp/static/css/webapp.css
@@ -76,6 +76,11 @@ nav ul li a {
   gap: 12px; 
 }
 
+.icon-container i.fas.fa-user-circle {
+  margin-top: 10px;
+  transform: scale(1.5); 
+}
+
 
 button {
   background-color: #2A7C6F;
