--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -29,7 +29,7 @@
                         <button type="submit" class="logout-button">Log Out</button>
                     </form>
                 {% else %}
-                    <a href="#" class="icon-link" onclick="toggleLoginForm();"><i class="fas fa-user-circle"></i></a>
+                    <i class="fas fa-user-circle icon-link"></i>
                     <button onclick="toggleLoginForm();" class="logout-button">Log In</button>
                     <div class="login-form-container" style="display: none;">
                         <form method="post" action="{% url 'webapp:welcome' %}">
