--- a/webapp/templates/webapp/post_search.html
+++ b/webapp/templates/webapp/post_search.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% load custom_filters %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/litepicker/dist/css/litepicker.css">
+{% endblock %}
 
 {% block content %}
 <div class="search-page">
@@ -19,26 +24,43 @@
                     </div>
                   </div>                  
             </form>
-            <a href="{% url 'webapp:home' %}">My Posts</a>
-        </div>
-        <div class="search-bar">
-            <form method="get" action="{% url 'webapp:post_search' %}">
-                <select name="season">
-                    <option value="">Select Season</option>
-                    <option value="winter">Winter</option>
-                    <option value="spring">Spring</option>
-                    <option value="summer">Summer</option>
-                    <option value="autumn">Autumn</option>
-                </select>
-                <select name="decade">
-                    <option value="">Select Decade</option>
-                    {% for decade in decades %}
-                        <option value="{{ decade }}">{{ decade }}s</option>
-                    {% endfor %}
-                </select>
-                <input type="text" name="search" class="search-input" placeholder="Search by words or years..." onkeypress="if(event.keyCode==13) this.form.submit();">                
-                <i class="fas fa-search"></i>
-            </form>
+            <div class="search-bar">
+                <form method="get" action="{% url 'webapp:post_search' %}">
+                    <div class="dropdown">
+                        <button class="dropdown-btn">Search</button>
+                        <div class="dropdown-content">
+                            <label>
+                                <input type="radio" name="search_type" value="season" checked> Season
+                                <select name="season">
+                                    <option value="">Select Season</option>
+                                    <option value="winter">Winter</option>
+                                    <option value="spring">Spring</option>
+                                    <option value="summer">Summer</option>
+                                    <option value="autumn">Autumn</option>
+                                </select>
+                            </label>
+                            <label>
+                                <input type="radio" name="search_type" value="decade"> Decade
+                                <select name="decade">
+                                    <option value="">Select Decade</option>
+                                    {% for decade in decades %}
+                                        <option value="{{ decade }}">{{ decade }}s</option>
+                                    {% endfor %}
+                                </select>
+                            </label>
+                            <label>
+                                <input type="radio" name="search_type" value="keyword" id="search-keyword"> Keyword
+                                <input type="text" name="search" class="search-input" id="search-input" placeholder="Search by keywords..." disabled>
+                            </label>
+                            <label>
+                                <input type="radio" name="search_type" value="daterange"> Date Range
+                                <input type="text" id="date-range-picker" name="date_range" placeholder="Select date range..." disabled>
+                            </label>                            
+                            <button type="submit">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
     <div class="hero-section">
@@ -46,51 +68,109 @@
         <p>Immerse yourself in the personal stories that make history come alive</p>
     </div>
     <div class="post-search-create-post-button">
-        <button onclick="location.href='{% url 'webapp:home' %}';">Create a Post</button>
+        <button onclick="location.href='{% url 'webapp:create_a_post' %}';">Create a Post</button>
     </div>
     <div class="featured-stories">
-        {% for post in posts %}
+        <h2>All Posts</h2>
+        {% for post in posts|slice:":5" %}
             <div class="story">
-                <img src="{{ post.image.url }}" alt="{{ post.title }}">
+                {% with post.description.html|safe|extract_first_image as image_src %}
+                    {% if image_src %}
+                        <img src="{{ image_src }}" alt="{{ post.title }} first image">
+                    {% endif %}
+                {% endwith %}
                 <div class="story-content">
                     <h3><a href="{% url 'webapp:post_detail' post.pk %}">{{ post.title|truncatewords:5 }}</a></h3>
-                    <p>{{ post.description|truncatewords:10 }}</p>
+                    <p>{{ post.description.html|safe | truncatewords:10}}</p>
+                    <p>{{ post.location }}</p>
+                    <p>{{ post.created_date }}</p>
+                </div>
+                <div class="user-section">
+                    {% if post.user.profile.profile_pic %}
+                        <img src="{{ post.user.profile.profile_pic.url }}" alt="{{ post.user.username }}" class="user-icon">
+                    {% endif %}
+                    <span>{{ post.user.username }}</span>
                 </div>
                 <div class="story-icons">
-                    <span><i class="fas fa-thumbs-up"></i> Likes: {{ post.like_count }}</span> 
-                    <span><i class="fas fa-comment"></i> Comments: {{ post.comment_count }}</span>
-                </div>
-                <div class="following-status">
-                    <!-- Add following status logic here -->
+                    <i class="fas fa-thumbs-up"></i> <strong>Likes:</strong> {{ post.likes.count }} &nbsp;
+                    <i class="fas fa-comment"></i> <strong>Comments:</strong> {{ post.comments.count }}&nbsp;
                 </div>
             </div>
         {% endfor %}
+        {% if posts.has_next %}
+            <div class="next-page">
+                <span>Page {{ posts.number }} of {{ posts.paginator.num_pages }}</span>
+                <a href="?page={{ posts.next_page_number }}">Next Page &raquo;</a>
+            </div>
+        {% else %}
+            <div class="current-page">
+                <span>Page {{ posts.number }}</span>
+            </div>
+        {% endif %}
     </div>
     <div class="new-posts">
-        <h2>Recent Posts</h2>
-        <div class="recent-posts-container">
-        {% for post in recent_posts|slice:":2" %}
-            <div class="new-post">
-                <div class="user-info">
-                    <img src="{{ post.user.profile.profile_pic.url }}" alt="{{ post.user.username }} profile picture">
-                    <div class="user-text">
-                        <p>{{ post.user.username }}</p>
-                        <p>{{ post.published_date|date:"F j, Y" }}</p>
-                    </div>
-                 </div>
-             <h3><a href="{% url 'webapp:post_detail' post.pk %}">{{ post.title }}</a></h3>
-            <p>{{ post.description|truncatewords:20 }}</p>
-            </div>
+        <h2>Post Map</h2>    
+        <div id="map" style="height: 400px; width: calc(100% - 300px); margin: 0 auto;"></div>
+        <script>
+        function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 3,
+            center: {lat: 35, lng: 320}
+        });
+        {% for post in posts %}
+        var marker = new google.maps.Marker({
+            position: {lat: {{ post.latitude }}, lng: {{ post.longitude }}},
+            map: map,
+            title: "{{ post.title }}"
+        });
+
+        marker.addListener('click', function() {
+            window.location.href = "{% url 'webapp:post_detail' post.pk %}";
+        });
         {% endfor %}
-        </div>
+        }
+        </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ API_KEY }}&callback=initMap"></script>
     </div>
 </div>
 {% endblock %}
 {% block extra_js %}
+<script src="https://cdn.jsdelivr.net/npm/litepicker/dist/js/main.js"></script>
 <script>
     document.querySelector('.dropdown-btn').addEventListener('click', function() {
       var content = document.querySelector('.dropdown-content');
       content.style.display = content.style.display === 'block' ? 'none' : 'block';
     });
-  </script>
+    var searchInputs = document.querySelectorAll('.dropdown-content select, .dropdown-content input[type="text"], .dropdown-content input[type="date"]');
+    var searchTypeRadios = document.querySelectorAll('.dropdown-content input[type="radio"]');
+    searchTypeRadios.forEach(function(radio) {
+        radio.addEventListener('change', function() {
+            searchInputs.forEach(function(input) {
+                input.disabled = true;
+            });
+            var inputToEnable = document.querySelector('.dropdown-content input[name="' + radio.value + '"], .dropdown-content select[name="' + radio.value + '"]');
+            if (inputToEnable) {
+                inputToEnable.disabled = false;
+            }
+        });
+    });
+    document.getElementById('search-keyword').addEventListener('change', function() {
+    var searchInput = document.getElementById('search-input');
+    if (this.checked) {
+      searchInput.disabled = false;
+    } else {
+      searchInput.disabled = true;
+    }
+    });
+    document.querySelector('.dropdown-content input[type="radio"]:checked').dispatchEvent(new Event('change'));
+
+    document.addEventListener('DOMContentLoaded', function () {
+        var dateRangePicker = new Litepicker({
+            element: document.getElementById('date-range-picker'),
+            singleMode: false,
+            format: 'YYYY-MM-DD',
+            delimiter: ' - ',
+  });
+});
+</script>
 {% endblock %}
