Added a code block at the beginning to display error messages.

--- a/webapp/templates/webapp/welcome.html
+++ b/webapp/templates/webapp/welcome.html
@@ -2,6 +2,13 @@
 {% load static %}
 
 {% block content %}
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     <div class="introduction">
         <div class="catchphrase">
             <h2>Journey Through Time...Immerse Yourself in the Charm of Living History</h2>
